June 2012
 - Updated help file for V5.0
April 2012
 - Added support for theming of hint window (thanks to Arno Garrels and Uwe Schuster)
 - TBaseVirtualTree.CheckParentCheckState: Fixed duplicate recursion to parent nodes
March 2012
 - Fixed painting of Windows7/Vista style Explorer selection in case tsUseExplorerTheme is in TreeOptions
 - Ctrl + A now selects all items
January 2012
 - Bug fix: Fixed a potential access violation in TBaseVirtualTree.FullCollapse in case of toChildrenAbove
December 2011
 - Fixed compiler warning in RAD Studio XE2 regarding deprecated ThemeServices
September 2011
 - The property EmptyListMessage may now contain linebreaks in Delphi 2009 and higher, the text in now printed in dark gray.
 - Support for flat scroll bars has been removed.
 - Global variables InWin2k and IsWinXP, enum member hsXPStyle, function DrawXPButton() and support for Windows 2000 has been removed.
 - Global variable IsWinNT and support for Windows 9x has been removed.
 - Improvement: Added support for Delphi XE2 and 64Bit compiler.
 - Support for Delphi 5/6 and C++ Builder 5/6 has been dropped.
 - Bug fix: Fixed a potential integer overflow in TBaseVirtualTree.ToggleNode in case of toChildrenAbove and NodeInView
 - Bug fix: Fixed a potential Assertion in TBaseVirtualTree.ToggleNode by checking GetFirstVisible before calling GetDisplayRect
 - Bug fix: TCustomVirtualTreeOptions.SetPaintOptions correctly changes the VisibleCount when toShowFilteredNodes is toggled
 - Improvement: Added new functions TBaseVirtualTree.DetermineDropMode
 - Improvement: Added usage of TBaseVirtualTree.DetermineDropMode in TBaseVirtualTree.DragOver
 - Improvement: Made EffectiveOffsetX accessible via read-only protected property for easier subclassing
 - Improvement: Moved TBaseVirtualTree.DetermineLineImageAndSelectLevel from private to protected for easier subclassing
 - Improvement: Sorted TBaseVirtualTree.SetEmptyListMessage
August 2011
 - Improvement: Minor code improvements